# fflib

./: Makefile  Makefile.am  README  README.md  configure.ac
benchmarks/3dfft/: 3d-fft.cpp  README.txt  communication_patterns.hpp
benchmarks/cg_solver/: cg_poisson_3d.c
benchmarks/ff_uts/: DIST_EXCLUDE  Makefile  README  config.in  ctrk.h  dlist.h  mpi_worksharing.c  mpi_workstealing.c  shared_dlist.h  stats.c  time_rng.c  upc_worksharing.c  uts-mpi-ws  uts_dfs.c  uts_upc_enhanced.c
benchmarks/ff_uts/config/: linux-dev
benchmarks/mg/: ff_multi.cpp  run.sh  todel
benchmarks/overlap/: overlap3.c  p4coll.c  p4coll.h  p4coll_test.c
benchmarks/petsc-3.6.3/: CMakeLists.txt  TAGS  build.log.bkp  configure.log.bkp  makefile
benchmarks/uts/: DIST_HEADER  dequeue.c  dequeue.h  dlist.c  gtc_ldbal.c  mpi_workstealing.c  shared_dequeue.c  shared_dequeue.h  shared_dlist.c  time_poll.c  uts-mpi-ws  uts_dm.c  uts_dm.h  uts_dot.c  uts_gpshmem.c  uts_hws.c
include/: ff.h  ff_collectives.h
m4/: portals4.m4
src/: ff.c  ff.h  ff_computation.c  ff_container.c  ff_impl.h  ff_op.c  ff_recv.c  ff_schedule.c  ff_send.c  ff_storage.c  ff_storage.h
src/colls/: ff_activation.c  ff_allgather.c  ff_allreduce.c  ff_alltoall.c  ff_barrier.c  ff_bcast.c  ff_collectives.h  ff_collectives_impl.h  ff_gather.c  ff_reduce.c  ff_scatter.c  ff_solo_allreduce.c
tests/: Makefile  allgather  allreduce.c  alltoall.c  barrier.c  broadcast.c  ff_multi.cpp  gather.c  multi.cpp  reduce.c  sbroadcast.c  scatter.c  scatter_long  scatter_long.c  solo_gather.c  sreduce.c  sscatter.c  test_utils.h
(+420 files in other folders)
